<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10pt"
    tools:context="no.ntnu.nauybeng.sudoku.activity.MainActivity">

    <Button
        android:id="@+id/playGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_play" />

    <Button
        android:id="@+id/createGameBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_create"
        android:visibility="visible" />

    <Button
        android:id="@+id/settingsBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settingsBtn"
        android:visibility="visible" />

    <Button
        android:id="@+id/instructionBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructionsBtn"
        android:visibility="visible" />

</LinearLayout>
