<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        >

        <Button
            android:id="@+id/newEasyGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/easy_difficulty" />

        <Button
            android:id="@+id/newMediumGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medium_difficulty"
            android:visibility="visible" />

        <Button
            android:id="@+id/newHardGameBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hard_difficulty" />
    </LinearLayout>


    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/navigation" />

</LinearLayout>